# vehicle-manager-axum

./: .env  .gitignore  Cargo.toml  README.md  http-test.http  log4rs.yaml  sqlite.db  sqlite.db-shm  sqlite.db-wal
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
src/: box_rc_test.rs  flexible_test.rs  lib.rs  main.rs  redis_test.rs  vehicle.rs
tests/: test_libvips.rs  test_mini_redis.rs  test_sqlite.rs  tests_p_simple.rs
