[package]
name = "vehicle-manager-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
colorize = "0.1.0"
inquire = { version = "0.9.1", features = ["date", "editor"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["full","rt", "net", "macros","tokio-macros"] }
log = "0.4"
log4rs = { version = "1.4.0", features = ["console_appender", "rolling_file_appender", "size_trigger", "time_trigger", "pattern_encoder", "gzip"] }
time = "0.3.43"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
mini-redis = "0.4"
smol = "2.0.2"
futures = "0.3.31"
csv = "1.3.1"
regex = "1.11.2"
chrono = "0.4.42"
