[package]
name = "vehicle-manager-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
colorize = "0.1.0"
inquire = { version = "0.9.1", features = ["date", "editor"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["full", "rt", "net", "macros", "tokio-macros"] }
log = "0.4"
log4rs = { version = "1.4.0", features = ["console_appender", "rolling_file_appender", "size_trigger", "time_trigger", "pattern_encoder", "gzip"] }
time = "0.3.44"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
mini-redis = "0.4"
smol = "2.0.2"
futures = "0.3.31"
csv = "1.3.1"
regex = "1.11.3"
chrono = "0.4.42"
axum = { version = "0.8.4", features = ["http2", "macros", "multipart", "tracing", "ws","json"] }
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features=["env-filter"] }
tracing-appender = "0.2.3"
uuid = { version = "1.18.1", features = ["v4"] }
lazy_static = "1.5.0"
hello_macro_derive = { path = "./hello_macro_derive"}
async-std = { version = "1.13.2" , features = ["attributes"]} 
anyhow = "1.0.100"
bytes = "1.10.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
crossbeam-utils = "0.8.21"
crossbeam-queue = "0.3.12"
crossbeam-epoch = "0.9.18"
sea-orm = { version = "1.1.16", features = ["with-json","with-uuid","debug-print","mock","with-chrono","runtime-tokio-native-tls","sqlx-mysql","sqlx-postgres","sqlx-sqlite", "macros"] }
sea-orm-migration = { version = "1.1.16", features = ["with-uuid","with-time","with-chrono","with-json","sqlx-mysql","runtime-tokio","sqlx-sqlite","sqlx-postgres","runtime-tokio-native-tls"] }
tokio-stream = "0.1.17"
smol-macros = "0.1.1"
flexi_logger = { version = "0.31", features = ["async", "compress", "specfile"] }
deadpool-postgres = "0.14.1"
deadpool-redis = "0.22.0"
rand = "0.9.2"
rand_distr = "0.5.1"
flate2 = "1.1.2"
tar = "0.4.44"
zip = "5.1.1"
ring = "0.17.14"
threadpool = "1.8.1"
num_cpus = "1.17.0"
walkdir = "2.5.0"
rayon = "1.11.0"
glob = "0.3.3"
image = "0.25.8"
error-chain = "0.12.4"
data-encoding = "2.9.0"
bitflags = "2.9.4"
sqlx = { version = "0.8.6", features = ["derive","macros","uuid","runtime-tokio","runtime-tokio-native-tls", "postgres", "mysql", "sqlite","chrono","bigdecimal","json"] }


